--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     <p>Offline-ready PWA</p>
   </footer>
 
-  <script src="main.js" defer></script>
+  <script src="app.js" defer></script>
 </body>
 </html>
